# OpenDataGhana-Backend

./: .gitignore  main.py  pyproject.toml  readme.md  sample.env
api/v1/router/: __init__.py  dataset.py  tag.py  user.py
core/: __init__.py  auth.py  config.py  db.py  logger.py
migrations/: env.py
migrations/versions/: 28f978306262_added_votes_column.py  2ffbf8c1c97e_added_row_and_column_count_fields_to_.py
schema/: __init__.py  base.py  dataset.py  metadata.py  user.py
