[project]
name = "open_data_ghana"
version = "0.1.0"
description = "Open Data Ghana is a platform that curates and organizes links to publicly available datasets, with a focus on Ghanaian-centric data. It offers a comprehensive, user-friendly directory where individuals can discover, explore, and contribute to datasets, all while fostering open access to valuable information for research, machine learning, and other data-driven initiatives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.11",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.23",
    "supabase>=2.13.0",
]
authors = {name= "Francis Echesi", email= "fechesi67@gmail.com"}
license = "MIT"

[dependency-groups]
dev = [
    "alembic>=1.14.1",
]
